; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00debug.c_rt2x00debug_open_queue_dump.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00debug.c_rt2x00debug_open_queue_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { %struct.rt2x00debug_intf* }
%struct.rt2x00debug_intf = type { i32 }
%struct.file = type { i32 }

@FRAME_DUMP_FILE_OPEN = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @rt2x00debug_open_queue_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt2x00debug_open_queue_dump(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.rt2x00debug_intf*, align 8
  %7 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %8 = load %struct.inode*, %struct.inode** %4, align 8
  %9 = getelementptr inbounds %struct.inode, %struct.inode* %8, i32 0, i32 0
  %10 = load %struct.rt2x00debug_intf*, %struct.rt2x00debug_intf** %9, align 8
  store %struct.rt2x00debug_intf* %10, %struct.rt2x00debug_intf** %6, align 8
  %11 = load %struct.inode*, %struct.inode** %4, align 8
  %12 = load %struct.file*, %struct.file** %5, align 8
  %13 = call i32 @rt2x00debug_file_open(%struct.inode* %11, %struct.file* %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %3, align 4
  br label %31

18:                                               ; preds = %2
  %19 = load i32, i32* @FRAME_DUMP_FILE_OPEN, align 4
  %20 = load %struct.rt2x00debug_intf*, %struct.rt2x00debug_intf** %6, align 8
  %21 = getelementptr inbounds %struct.rt2x00debug_intf, %struct.rt2x00debug_intf* %20, i32 0, i32 0
  %22 = call i64 @test_and_set_bit(i32 %19, i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %18
  %25 = load %struct.inode*, %struct.inode** %4, align 8
  %26 = load %struct.file*, %struct.file** %5, align 8
  %27 = call i32 @rt2x00debug_file_release(%struct.inode* %25, %struct.file* %26)
  %28 = load i32, i32* @EBUSY, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %3, align 4
  br label %31

30:                                               ; preds = %18
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %24, %16
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @rt2x00debug_file_open(%struct.inode*, %struct.file*) #1

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @rt2x00debug_file_release(%struct.inode*, %struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
